# telcoassist-rag

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOY_AWS.md  Dockerfile  ENTERPRISE_RAG_READINESS.md  README.md  SCALE_1M.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-ci.txt  requirements.txt  troubleshoot.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  middleware.py
app/api/: ask.py  dashboard.py  feedback.py  guardrails.py  ingest.py  prompt_lab.py  query.py  upload.py
app/evaluation/: eval_answers.py  eval_retrieval.py
app/ingestion/: chunker.py  embedder.py  indexer.py  parser.py  pipeline.py
app/models/: __init__.py  schemas.py
app/rag/: __init__.py  generator.py  prompt_lab.py  prompts.py  reranker.py  retriever.py
app/security/: __init__.py  acl.py  audit.py  llm_firewall.py
data/: golden_questions.csv
data/raw/: 5g_troubleshooting_sop.md  billing_dispute_process.md  esim_migration_guide.md  outage_escalation_runbook.md  sim_activation_policy.md
docs/: COMMIT_GUIDE.md
scripts/: __init__.py  benchmark_msmarco_qdrant.py  evaluate.py  generate_synthetic_docs.py  ingest.py
tests/: test_ask_inventory.py  test_chunker.py  test_dashboard.py  test_enterprise_controls.py  test_feedback.py  test_generator.py  test_llm_firewall.py  test_middleware.py  test_prompt_lab.py  test_query_ui.py  test_upload.py
