[project]
name = "telcoassist-rag"
version = "0.1.0"
description = "Enterprise-style RAG for telecom support, policy, and network intelligence"
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
